Fix drafts page, and main page ui on mobile.

--- a/static/admin_drafts.css
+++ b/static/admin_drafts.css
@@ -65,7 +65,7 @@
     }
     .back-button {
         position: absolute;
-        top: 90%;
-        left: 40%;
+        top: 5%;
+        left: 5%;
     }
 }
